# internal/app/model/login_user_request.go
@@ -1,1 +1,6 @@
 package model
+
+type LoginUserRequest struct {
+	Username string `json:"username"`
+	Password string `json:"password"`
+}
